[INTERNAL] - Use azul-openjdk jvm 16 in cruise-control docker image